--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Daniel Chege Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script type="module" src="script.js"></script>
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Portfolio</div>
+            <div class="logo">Welcome to my Portfolio</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -58,7 +58,7 @@
                     <h3>Bachelor of Science in Community and Development</h3>
                     <p class="institution">Jaramogi Oginga Odinga University of Science and Technology</p>
                     <p class="duration">2016 - 2020</p>
-                    <p class="description">Relevant coursework and achievements during the program.</p>
+                    <p class="description">Studied key areas like epidemiology, health communication, project management, and environmental health.</p>
                 </div>
             </div>
             <div class="education-card">
@@ -211,9 +211,9 @@
                 <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/254713332171">WhatsApp</a></p>
             </div>
             <div class="social-links">
-                <a href="#"><img src="images/github.png" alt="GitHub" class="social-icon"></a>
-                <a href="#"><img src="images/Linkedin.jpg" alt="LinkedIn" class="social-icon"></a>
-                <a href="#"><img src="images/twitter.jpg" alt="Twitter" class="social-icon"></a>
+                <a href="https://github.com/danchege"><img src="images/github.png" alt="GitHub" class="social-icon"></a>
+                <a href="https://www.linkedin.com/in/dan-chege-296b56351/"><img src="images/Linkedin.jpg" alt="LinkedIn" class="social-icon"></a>
+                <a href="https://twitter.com/dan_chege_"><img src="images/twitter.jpg" alt="Twitter" class="social-icon"></a>
             </div>
         </div>
     </section>
