--- a/index.html
+++ b/index.html
@@ -125,12 +125,27 @@
                     <i class="fas fa-laptop-code"></i>
                 </div>
                 <h3>Personal Portfolio Website</h3>
-                <p>A modern portfolio website built with HTML, CSS, and JavaScript, featuring a black and blue theme with glowing effects.</p>
+                <p>A modern portfolio website built with HTML, CSS, and JavaScript.</p>
                 <div class="project-links">
                     <a href="https://danchege.github.io/my-portfolio/" target="_blank" class="demo-link">
                         <i class="fas fa-external-link-alt"></i> Live Demo
                     </a>
                     <a href="https://github.com/danchege/my-portfolio.git" target="_blank" class="github-link">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-icon">
+                    <i class="fas fa-laptop-code"></i>
+                </div>
+                <h3>Personal Portfolio Website</h3>
+                <p>A modern portfolio website built with HTML, CSS, and JavaScript, featuring a black and blue theme with glowing effects.</p>
+                <div class="project-links">
+                    <a href="https://danchege.github.io/my-website/" target="_blank" class="demo-link">
+                        <i class="fas fa-external-link-alt"></i> Live Demo
+                    </a>
+                    <a href="https://github.com/danchege/my-website.git" target="_blank" class="github-link">
                         <i class="fab fa-github"></i> GitHub
                     </a>
                 </div>
