My website update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#education">Education</li>
+                <li><a href="education">Education</li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -56,7 +56,7 @@
                     <i class="fas fa-graduation-cap"></i>
                 </div>
                 <div class="education-content">
-                    <h3>Bachelor of Science in Community and Development</h3>
+                    <h3>Bachelor of Science in Community Health and Development</h3>
                     <p class="institution">Jaramogi Oginga Odinga University of Science and Technology</p>
                     <p class="duration">2016 - 2020</p>
                     <p class="description">Studied key areas like epidemiology, health communication, project management, and environmental health.</p>
@@ -139,13 +139,28 @@
                 <div class="project-icon">
                     <i class="fas fa-laptop-code"></i>
                 </div>
-                <h3>Personal Portfolio Website</h3>
+                <h3>My Website</h3>
                 <p>A modern portfolio website built with HTML, CSS, and JavaScript, featuring a black and blue theme with glowing effects.</p>
                 <div class="project-links">
                     <a href="https://danchege.github.io/my-website/" target="_blank" class="demo-link">
                         <i class="fas fa-external-link-alt"></i> Live Demo
                     </a>
                     <a href="https://github.com/danchege/my-website.git" target="_blank" class="github-link">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-icon">
+                    <i class="fas fa-laptop-code"></i>
+                </div>
+                <h3>Calculator</h3>
+                <p>A digital user friendly and fully funtional calculator.</p>
+                <div class="project-links">
+                    <a href="https://danchege.github.io/calculator/" target="_blank" class="demo-link">
+                        <i class="fas fa-external-link-alt"></i> Live Demo
+                    </a>
+                    <a href="https://github.com/danchege/calculator.git" target="_blank" class="github-link">
                         <i class="fab fa-github"></i> GitHub
                     </a>
                 </div>
