--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="education-content">
                     <h3>Web Development Certification</h3>
                     <p class="institution">Alisson Academy</p>
-                    <p class="duration">2021</p>
+                    <p class="duration">2023</p>
                     <p class="description">Specialized training in modern web development technologies.</p>
                 </div>
             </div>
@@ -161,6 +161,21 @@
                         <i class="fas fa-external-link-alt"></i> Live Demo
                     </a>
                     <a href="https://github.com/danchege/calculator.git" target="_blank" class="github-link">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-icon">
+                    <i class="fas fa-laptop-code"></i>
+                </div>
+                <h3>Dev Dan Mingle</h3>
+                <p>A  user friendly and fully funtional Chat application.</p>
+                <div class="project-links">
+                    <a href="https://danchege.github.io/Dev-Dan-mingle/" target="_blank" class="demo-link">
+                        <i class="fas fa-external-link-alt"></i> Live Demo
+                    </a>
+                    <a href="https://github.com/danchege/Dev-Dan-mingle.git" target="_blank" class="github-link">
                         <i class="fab fa-github"></i> GitHub
                     </a>
                 </div>
