--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="education-content">
                     <h3>Web Development Certification</h3>
                     <p class="institution">Alisson Academy</p>
-                    <p class="duration">2023</p>
+                    <p class="duration">2021</p>
                     <p class="description">Specialized training in modern web development technologies.</p>
                 </div>
             </div>
@@ -95,12 +95,57 @@
                     <i class="fas fa-store"></i>
                 </div>
                 <h3>Bids by Dan Website</h3>
-                <p>A modern and responsive sales website, featuring a clean design and smooth user experience.</p>
+                <p>A modern and responsive bidding website , featuring a clean design and smooth user experience.</p>
                 <div class="project-links">
                     <a href="https://danchege.github.io/Bids-by-Dan/" target="_blank" class="demo-link">
                         <i class="fas fa-external-link-alt"></i> Live Demo
                     </a>
-                    <a href="https://github.com/danchege/Bids-by-Dan.git" target="_blank" class="github-link">
+                    <a href="https://github.com/danchege/Bids-by-Dann.git" target="_blank" class="github-link">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-icon">
+                    <i class="fa-solid fa-comments"></i>
+                </div>
+                <h3>Dev Dan Mingle</h3>
+                <p>A responsive Web Chat for peer interaction and discussions.</p>
+                <div class="project-links">
+                    <a href="https://dev-dan-mingle.web.app/" target="_blank" class="demo-link">
+                        <i class="fas fa-external-link-alt"></i> Live Demo
+                    </a>
+                    <a href="https://github.com/danchege/Dev-dan mingle.git" target="_blank" class="github-link">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-icon">
+                    <i class="fa-solid fa-brain"></i>
+                </div>
+                <h3>Dev Quiz</h3>
+                <p>A Frontend based quiz page for learners to test their knowledge in web development.</p>
+                <div class="project-links">
+                    <a href="https://danchege.github.io/dev-quiz/" target="_blank" class="demo-link">
+                        <i class="fas fa-external-link-alt"></i> Live Demo
+                    </a>
+                    <a href="https://github.com/danchege/dev-quiz.git" target="_blank" class="github-link">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-icon">
+                    <i class="fa-solid fa-school"></i>
+                </div>
+                <h3>Study Plan Generator</h3>
+                <p>A study planner that help schedule studies easily with a modern design and alerts users on upcoming events.</p>
+                <div class="project-links">
+                    <a href="https://danchege.github.io/my-study-planner/" target="_blank" class="demo-link">
+                        <i class="fas fa-external-link-alt"></i> Live Demo
+                    </a>
+                    <a href="https://github.com/danchege/study planner.git" target="_blank" class="github-link">
                         <i class="fab fa-github"></i> GitHub
                     </a>
                 </div>
@@ -122,22 +167,7 @@
             </div>
             <div class="project-card">
                 <div class="project-icon">
-                    <i class="fas fa-laptop-code"></i>
-                </div>
-                <h3>Personal Portfolio Website</h3>
-                <p>A modern portfolio website built with HTML, CSS, and JavaScript.</p>
-                <div class="project-links">
-                    <a href="https://danchege.github.io/my-portfolio/" target="_blank" class="demo-link">
-                        <i class="fas fa-external-link-alt"></i> Live Demo
-                    </a>
-                    <a href="https://github.com/danchege/my-portfolio.git" target="_blank" class="github-link">
-                        <i class="fab fa-github"></i> GitHub
-                    </a>
-                </div>
-            </div>
-            <div class="project-card">
-                <div class="project-icon">
-                    <i class="fas fa-laptop-code"></i>
+                    <i class="fas fa-user-tie"></i>
                 </div>
                 <h3>My Website</h3>
                 <p>A modern portfolio website built with HTML, CSS, and JavaScript, featuring a black and blue theme with glowing effects.</p>
@@ -145,14 +175,14 @@
                     <a href="https://danchege.github.io/my-website/" target="_blank" class="demo-link">
                         <i class="fas fa-external-link-alt"></i> Live Demo
                     </a>
-                    <a href="https://github.com/danchege/my-website.git" target="_blank" class="github-link">
+                    <a href="https://github.com/danchege/my-websites.git" target="_blank" class="github-link">
                         <i class="fab fa-github"></i> GitHub
                     </a>
                 </div>
             </div>
             <div class="project-card">
                 <div class="project-icon">
-                    <i class="fas fa-laptop-code"></i>
+                    <i class="fa-solid fa-calculator"></i>
                 </div>
                 <h3>Calculator</h3>
                 <p>A digital user friendly and fully funtional calculator.</p>
@@ -161,21 +191,6 @@
                         <i class="fas fa-external-link-alt"></i> Live Demo
                     </a>
                     <a href="https://github.com/danchege/calculator.git" target="_blank" class="github-link">
-                        <i class="fab fa-github"></i> GitHub
-                    </a>
-                </div>
-            </div>
-            <div class="project-card">
-                <div class="project-icon">
-                    <i class="fas fa-laptop-code"></i>
-                </div>
-                <h3>Dev Dan Mingle</h3>
-                <p>A  user friendly and fully funtional Chat application.</p>
-                <div class="project-links">
-                    <a href="https://danchege.github.io/Dev-Dan-mingle/" target="_blank" class="demo-link">
-                        <i class="fas fa-external-link-alt"></i> Live Demo
-                    </a>
-                    <a href="https://github.com/danchege/Dev-Dan-mingle.git" target="_blank" class="github-link">
                         <i class="fab fa-github"></i> GitHub
                     </a>
                 </div>
@@ -254,12 +269,13 @@
             <div class="contact-info">
                 <p><i class="fas fa-envelope"></i> <a href="mailto:danychege28@gmail.com">danychege28@gmail.com</a></p>
                 <p><i class="fas fa-phone"></i> <a href="tel:+254713332171">+254 713332171</a></p>
-                <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/254713332171">WhatsApp</a></p>
+                <p><i class="fa-brands fa-whatsapp"></i></i> <a href="https://wa.me/254713332171">WhatsApp</a></p>
             </div>
             <div class="social-links">
-                <a href="https://github.com/danchege"><img src="images/github.png" alt="GitHub" class="social-icon"></a>
-                <a href="https://www.linkedin.com/in/dan-chege-296b56351/"><img src="images/Linkedin.jpg" alt="LinkedIn" class="social-icon"></a>
-                <a href="https://twitter.com/dan_chege_"><img src="images/twitter.jpg" alt="Twitter" class="social-icon"></a>
+                <a href="https://github.com/danchege"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/dan-chege-296b56351/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://twitter.com/dan_chege_"><i class="fa-brands fa-twitter"></i></i></a>
+                <a href="https://www.facebook.com/danny.chei.1"><i class="fa-brands fa-facebook"></i></a>
             </div>
         </div>
     </section>
