--- a/index.html
+++ b/index.html
@@ -92,19 +92,68 @@
         <div class="project-grid">
             <div class="project-card">
                 <div class="project-icon">
-                    <i class="fas fa-store"></i>
+                    <i class="fa-brands fa-bots"></i>
                 </div>
-                <h3>Bids by Dan Website</h3>
-                <p>A modern and responsive bidding website , featuring a clean design and smooth user experience.</p>
+                <h3>Farmbot</h3>
+                <p>A modern interactive live bot that helps farmers to manage their farms , featuring a clean design and smooth user experience.</p>
                 <div class="project-links">
-                    <a href="https://danchege.github.io/Bids-by-Dan/" target="_blank" class="demo-link">
+                    <a href="https://farm-bot.vercel.app/" target="_blank" class="demo-link">
                         <i class="fas fa-external-link-alt"></i> Live Demo
                     </a>
-                    <a href="https://github.com/danchege/Bids-by-Dann.git" target="_blank" class="github-link">
+                    <a href="https://github.com/danchege/FarmBot.git" target="_blank" class="github-link">
                         <i class="fab fa-github"></i> GitHub
                     </a>
                 </div>
             </div>
+
+            <div class="project-card">
+                <div class="project-icon">
+                    <i class="fa-solid fa-hand-holding-heart"></i>
+                </div>
+                <h3>Tushikane</h3>
+                <p>A modern, full-stack web application that connects volunteers, donors, and community members to support humanitarian initiatives and community projects..</p>
+                <div class="project-links">
+                    <a href="http://tushikane.vercel.app/" target="_blank" class="demo-link">
+                        <i class="fas fa-external-link-alt"></i> Live Demo
+                    </a>
+                    <a href="https://github.com/danchege/Tushikane.git" target="_blank" class="github-link">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-icon">
+                    <i class="fa-solid fa-leaf"></i>
+                </div>
+                <h3>AgriConnect</h3>
+                <p>platform that bridges the gap between farmers and markets</p>
+                <div class="project-links">
+                    <a href="https://agriconnect-e8ef7.web.app/" target="_blank" class="demo-link">
+                        <i class="fas fa-external-link-alt"></i> Live Demo
+                    </a>
+                    <a href="https://github.com/danchege" target="_blank" class="github-link">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-icon">
+                    <i class="fa-solid fa-gamepad"></i>
+                </div>
+                <h3>CtrlZone</h3>
+                <p>CtrlZone gaming Center website.</p>
+                <div class="project-links">
+                    <a href="https://ctrlzone-ac391.web.app/" target="_blank" class="demo-link">
+                        <i class="fas fa-external-link-alt"></i> Live Demo
+                    </a>
+                    <a href="https://github.com/danchege" target="_blank" class="github-link">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                </div>
+            </div>
+
             <div class="project-card">
                 <div class="project-icon">
                     <i class="fa-solid fa-comments"></i>
@@ -120,6 +169,7 @@
                     </a>
                 </div>
             </div>
+
             <div class="project-card">
                 <div class="project-icon">
                     <i class="fa-solid fa-brain"></i>
@@ -135,6 +185,7 @@
                     </a>
                 </div>
             </div>
+
             <div class="project-card">
                 <div class="project-icon">
                     <i class="fa-solid fa-school"></i>
@@ -150,51 +201,7 @@
                     </a>
                 </div>
             </div>
-            <div class="project-card">
-                <div class="project-icon">
-                    <i class="fas fa-user-tie"></i>
-                </div>
-                <h3>Peter Asiyo Website</h3>
-                <p>A simple portfolio website with a modern design in HTML and CSS.</p>
-                <div class="project-links">
-                    <a href="https://danchege.github.io/peter-asiyo/" target="_blank" class="demo-link">
-                        <i class="fas fa-external-link-alt"></i> Live Demo
-                    </a>
-                    <a href="https://github.com/danchege/peter-asiyo.git" target="_blank" class="github-link">
-                        <i class="fab fa-github"></i> GitHub
-                    </a>
-                </div>
-            </div>
-            <div class="project-card">
-                <div class="project-icon">
-                    <i class="fas fa-user-tie"></i>
-                </div>
-                <h3>My Website</h3>
-                <p>A modern portfolio website built with HTML, CSS, and JavaScript, featuring a black and blue theme with glowing effects.</p>
-                <div class="project-links">
-                    <a href="https://danchege.github.io/my-website/" target="_blank" class="demo-link">
-                        <i class="fas fa-external-link-alt"></i> Live Demo
-                    </a>
-                    <a href="https://github.com/danchege/my-websites.git" target="_blank" class="github-link">
-                        <i class="fab fa-github"></i> GitHub
-                    </a>
-                </div>
-            </div>
-            <div class="project-card">
-                <div class="project-icon">
-                    <i class="fa-solid fa-calculator"></i>
-                </div>
-                <h3>Calculator</h3>
-                <p>A digital user friendly and fully funtional calculator.</p>
-                <div class="project-links">
-                    <a href="https://danchege.github.io/calculator/" target="_blank" class="demo-link">
-                        <i class="fas fa-external-link-alt"></i> Live Demo
-                    </a>
-                    <a href="https://github.com/danchege/calculator.git" target="_blank" class="github-link">
-                        <i class="fab fa-github"></i> GitHub
-                    </a>
-                </div>
-            </div>
+            
         </div>
     </section>
 
