--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>I'm a passionate web developer with expertise in creating beautiful and functional websites. I love turning complex problems into simple, beautiful, and intuitive solutions.</p>
+                <p>I'm a self-driven developer with a strong foundation in full-stack development using the MERN stack. I build lightweight, efficient applications with a focus on solving real-world problems and enhancing user experience. Beyond software development, I have a keen interest in cybersecurity, with hands-on knowledge in ethical hacking and penetration testing. Comfortable working in both Linux and Windows environments, I'm constantly exploring new technologies and committed to continuous learning and innovation in the tech space.</p>
             </div>
         </div>
     </section>
@@ -67,10 +67,10 @@
                     <i class="fas fa-certificate"></i>
                 </div>
                 <div class="education-content">
-                    <h3>Web Development Certification</h3>
-                    <p class="institution">Alisson Academy</p>
+                    <h3>Cyber Security Certification</h3>
+                    <p class="institution">Alison Academy</p>
                     <p class="duration">2021</p>
-                    <p class="description">Specialized training in modern web development technologies.</p>
+                    <p class="description">Specialized training in modern cyber security practices, penetration testing, and ethical hacking, Cyberthreats and prevention against attacks.</p>
                 </div>
             </div>
             <div class="education-card">
@@ -81,7 +81,7 @@
                     <h3>Software Development</h3>
                     <p class="institution">PLP Academy</p>
                     <p class="duration">2024 - Present</p>
-                    <p class="description">Currently pursuing advanced software development skills and modern programming practices.</p>
+                    <p class="description">Specialized in Full Stack MERN, Python, Database Design and Programming with SQL, Web Development, Git and Github and modern programming practices.</p>
                 </div>
             </div>
         </div>
